@@ -3,12 +3,13 @@ package com.demo;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.flatMapping;
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.mapping;
 import static java.util.stream.Collectors.toList;
 
 /**
@@ -17,21 +18,22 @@ import static java.util.stream.Collectors.toList;
 public class StreamTests {
 
     public static void main(String[] args) {
-        Arrays.asList(
-                new A("a",  List.of("1", "2", "3")),
-                new A("a", List.of("4","5","6")),
-                new A("b", List.of("7,","8,","9")),
-                new A("b", List.of("10,","11,","12"))
-        ).stream()
-                .collect(Collectors.groupingBy(A::getName, Collectors.mapping(A::getArray, Collectors.mapping())));
+        List<A> list = Arrays.asList(
+                new A("a", List.of("1", "2", "3")),
+                new A("a", List.of("4", "5", "6")),
+                new A("b", List.of("7", "8", "9")),
+                new A("b", List.of("10", "11", "12"))
+        );
+        Map<String, List<String>> collect = list.stream()
+                .collect(groupingBy(A::getName, mapping(A::getArray, flatMapping(List::stream, toList()))));
+        System.out.println(collect);
 
     }
 
 
-
     @Data
     @AllArgsConstructor
-    static class  A {
+    static class A {
         private String name;
         private List<String> array;
     }
